# RPi_Home

./: .gitignore  Procfile  README.md  requirements.txt
dashboard/: .gitignore  CMakeLists.txt  main.cpp  resources.qrc
dashboard/Controller/: DeviceController.cpp  DeviceController.h  MainController.cpp  MainController.h
dashboard/Model/: MqttDevice.cpp  MqttDevice.h
dashboard/Model/Devices/: Device.h  DeviceFactory.h  DeviceInfo.h  DeviceManager.cpp  DeviceManager.h
dashboard/Model/Devices/CommandDevices/: CommandDevice.h  Fan.h  Light.h
dashboard/Model/Devices/DeviceTypes/: LightDevice.h
dashboard/Model/Devices/Sensors/: MoistureSensor.h  Sensor.h  SensorData.h  TemperatureSensor.h
dashboard/Model/Rooms/: Room.h
dashboard/View/: BaseView.h
dashboard/View/Dashboard/: CustomComboDelegate.h  DashboardView.cpp  DashboardView.h  DeviceButton.cpp  DeviceButton.h  DeviceSection.cpp  DeviceSection.h
dashboard/View/Dialogs/: AddDeviceDialog.cpp  AddDeviceDialog.h
dashboard/View/MainWindow/: MainWindow.cpp  MainWindow.h  MainWindow_old.cpp  MainWindow_old.h
dashboard/View/Views/: BaseView.h
dashboard/res/styles/: default.qss
discord_bot/: bot.py  bot_topics.py
raspberry_pis/: setup.py
raspberry_pis/common/: PicoCommon.py  RPi4.py  Sensor.py  setup.py  topics.py
raspberry_pis/common/4/: RPi4.py
raspberry_pis/pi_4b_1/: main.py
raspberry_pis/pi_4b_1_temperature_fan/: .gitignore  main.py  requirements.txt  run_assistant.py
raspberry_pis/pi_4b_1_temperature_fan/test_files/: test_assistant.py  test_rhasspy.py  test_screen.py
raspberry_pis/pi_4b_2/: main.py  requirements.txt
raspberry_pis/pi_picoW_1/: .gitignore  main.py
raspberry_pis/pi_picoW_2/: main.py
